--- a/server/package.json
+++ b/server/package.json
@@ -9,17 +9,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.14.2",
     "socket.io": "^4.7.4",
     "sqlite3": "^5.1.6",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "uuid": "^9.0.1",
-    "moment": "^2.29.4"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   }
-} 
+}
